# okmtyuta.phd

./: .dockerignore  .gitignore  Taskfile.yml  biome.json  docker-compose.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
apps/about/client/: package.json
apps/about/client/src/layouts/: Layout.astro
apps/about/client/src/pages/: index.astro
apps/survey/api/: Dockerfile  pyproject.toml
apps/survey/api/app/: create_app.py  main.py
apps/survey/client/: package-lock.json  package.json  tsconfig.json
apps/survey/client/app/: layout.tsx  page.tsx  reset.css
apps/survey/client/components/: Header.tsx  header.module.css
